# sysf-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: ast.rs  ctx.rs  grammar.lalrpop  grammar.rs  lib.rs  main.rs  pp.rs  typeck.rs
src/ast/: core.rs  parse.rs
src/pp/: ast_core.rs  ast_parse.rs
src/typeck/: subtyping.rs
