[package]
name = "sysf-rs"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
tracing-subscriber = { version = "0.2.13", optional = true }
tracing = { version = "0.1.26", optional = true }
pretty = "0.10.0"
# derive_more = "0.99.16"

[build-dependencies]
lalrpop = "0.19.6"

[features]
default = ["trace"]
trace = ["tracing-subscriber", "tracing"]